# api/docs/swagger.json
@@ -1753,7 +1753,7 @@
                 "server_status"
             ],
             "properties": {
-                "ipbans": {
+                "ip_bans": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/models.IPBanPoints"
@@ -1767,6 +1767,12 @@
                     "items": {
                         "$ref": "#/definitions/models.DailyTraffic"
                     }
+                },
+                "top_bandwidth_user": {
+                    "$ref": "#/definitions/repository.TopBandwidthUsers"
+                },
+                "total_bandwidth": {
+                    "$ref": "#/definitions/repository.TotalBandwidths"
                 },
                 "users": {
                     "$ref": "#/definitions/home.GetHomeUser"
@@ -2381,6 +2387,38 @@
                         "TotallyReceive"
                     ],
                     "example": "MonthlyTransmit"
+                }
+            }
+        },
+        "repository.TopBandwidthUsers": {
+            "type": "object",
+            "properties": {
+                "top_rx": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.OcservUser"
+                    }
+                },
+                "top_tx": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.OcservUser"
+                    }
+                }
+            }
+        },
+        "repository.TotalBandwidths": {
+            "type": "object",
+            "required": [
+                "rx",
+                "tx"
+            ],
+            "properties": {
+                "rx": {
+                    "type": "number"
+                },
+                "tx": {
+                    "type": "number"
                 }
             }
         },
